k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: docker-lab
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: docker-lab
spec:
  selector:
    app: database
  ports:
  - port: 3306
